Adding user and admin access roles. Differentiation of access rights